--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cli": "^1.0.1",
     "express": "^5.1.0",
-    "netlify": "^21.5.0"
+    "netlify": "^21.5.0",
+    "node-fetch": "^3.3.2"
   }
 }
