--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "cli": "^1.0.1",
     "express": "^5.1.0",
     "netlify": "^21.5.0",
